samples/_failures_safe/1761476776_54e16b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5707ad4.c: In function ‘main’:
./samples/SAFE/__tmp_f5707ad4.c:162:9: error: expected expression at end of input
  162 |         if (token.type == TOKEN_EOF || token.type == TOKEN_ERROR)
      |         ^~
./samples/SAFE/__tmp_f5707ad4.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5707ad4.c:162:9: error: expected declaration or statement at end of input
